@@ -1,5 +1,6 @@
 package ch.heigvd.dai.controllers;
 
+import ch.heigvd.dai.utils.SQLFileLoader;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.github.jasync.sql.db.Connection;
 import com.github.jasync.sql.db.QueryResult;
@@ -8,22 +9,14 @@ import io.javalin.Javalin;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.List;
+import java.util.Arrays;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 
 public class OrderController {
-    private static final Logger logger = LoggerFactory.getLogger(OrderController.class);
-    private final ObjectMapper objectMapper = new ObjectMapper();
+    public void registerRoutes(Javalin app, Connection connection) {
 
-    public void registerRoutes(Javalin app, Connection connection) throws IOException {
-
-        // Fetch all waiting orders
-        String waitingOrdersQuery = Files.readString(Path.of("src/main/resources/public/sql/waitingOrders.sql"), StandardCharsets.UTF_8);
+        String waitingOrdersQuery = SQLFileLoader.loadSQLFile("sql/waitingOrders.sql");
 
         app.get("/api/orders-waiting", ctx -> {
             try {
@@ -34,11 +27,11 @@ public class OrderController {
                         .map(row -> {
                             ArrayRowData rowData = (ArrayRowData) row;
                             return Map.of(
-                                    "produit", rowData.get(0), // Product name
-                                    "quantite", rowData.get(1), // Quantity
-                                    "dateCommande", rowData.get(2).toString(), // Convert date to String format
-                                    "joursDepuisCommande", rowData.get(3), // Days since order
-                                    "mouvementStockId", rowData.get(4) // Stock movement ID
+                                    "produit", rowData.get(0),
+                                    "quantite", rowData.get(1),
+                                    "dateCommande", rowData.get(2).toString(),
+                                    "joursDepuisCommande", rowData.get(3),
+                                    "mouvementStockId", rowData.get(4)
                             );
                         })
                         .toList());
@@ -47,35 +40,47 @@ public class OrderController {
             }
         });
 
+        app.put("/api/orders-confirm", ctx -> {
+            ObjectMapper mapper = new ObjectMapper();
+            Map requestData = mapper.readValue(ctx.body(), Map.class);
 
-        // Confirm an order (change status to 'confirmed' and update stock)
-        app.post("/api/orders-confirm", ctx -> {
-            Map<String, Object> requestData = objectMapper.readValue(ctx.body(), Map.class);
-
-            int orderId = Integer.parseInt(requestData.get("id").toString());
+            int mouvementStockId = Integer.parseInt(requestData.get("id").toString());
             String receivedDate = requestData.get("date").toString();
             int receivedQuantity = Integer.parseInt(requestData.get("quantite").toString());
 
-            logger.info("Confirming order ID: {} with quantity {}", orderId, receivedQuantity);
+            String updateQuery =
+                    """
+                            UPDATE MouvementStock
+                            SET date = ?, quantite = ?
+                            WHERE id = ?
+                            """;
 
-            // Update the order status to confirmed
-            String updateOrderQuery = """
-                        UPDATE mouvementStock
-                        SET date = ?
-                        WHERE id = ?
-                    """;
 
-            CompletableFuture<QueryResult> futureOrderUpdate = connection.sendPreparedStatement(updateOrderQuery, List.of(receivedDate, orderId));
+            CompletableFuture<QueryResult> future = connection.sendPreparedStatement(updateQuery, Arrays.asList(
+                    receivedDate,
+                    receivedQuantity,
+                    mouvementStockId
+            ));
 
-            // Handle responses
-            futureOrderUpdate.thenAccept(orderResult -> {
-                if (orderResult.getRowsAffected() > 0) {
-                    ctx.status(200).json(Map.of("message", "Commande confirmée et stock mis à jour avec succès"));
+            future.thenAccept(queryResult -> {
+                if (queryResult.getRowsAffected() > 0) {
+                    ctx.status(200).result("Commande mise à jour avec succès");
                 } else {
-                    ctx.status(404).json(Map.of("error", "Stock non trouvé pour cette commande"));
+                    ctx.status(404).result("MouvementStock non trouvé");
                 }
             }).exceptionally(e -> {
-                ctx.status(500).json(Map.of("error", "Erreur lors de la confirmation de la commande : " + e.getMessage()));
+                ctx.status(500).result("Erreur interne : " + e.getMessage());
+                return null;
+            });
+
+            future.thenAccept(queryResult -> {
+                if (queryResult.getRowsAffected() > 0) {
+                    ctx.status(200).result("Mise à jour réussie");
+                } else {
+                    ctx.status(404).result("Vendeur non trouvé");
+                }
+            }).exceptionally(e -> {
+                ctx.status(500).result("Erreur interne : " + e.getMessage());
                 return null;
             });
         });
